syntax = "proto3";

package v2;
option csharp_namespace = "AsimKiosk.Infrastructure.Common.PaymentHub";
option java_multiple_files = true;
option java_package = "com.asimgroup.paymentservice.grpc.service.v2";
option java_outer_classname = "PaymentServiceProto";

// The greeting service definition.
service PaymentGateway {
  // Sends a greeting
  rpc Checkout (PaymentRequest) returns (GrpcCommonResponse) {}
  rpc Check (PaymentRequest) returns (GrpcCommonResponse) {}
}

message PaymentRequest {
  Order order = 1;
  Payment payment = 2;
  string signature = 3;
  string requestId = 4;
  string deviceId = 5;
  optional string custId = 6;
}
message CheckRequest {
  Payment payment = 1;
  Order order = 2;
  string signature = 3;
  string requestId = 4;
  string deviceId = 5;
}
message GrpcCommonResponse{
  string errorCode = 1;
  string errorMessage = 2;
  string technicalCode = 3;
  string technicalMessage = 4;
  ResponseObject response = 5;
}
message ResponseObject {
  string orderNo = 1;
  string transNo = 2 ;
  optional PaymentStatus status = 3;
  optional string createdAt = 4;
  optional string paidAt = 5;
  optional int64 amount = 6;
  optional string partnerCode = 7;
  optional string approvalCode = 8;
  optional string partnerStatus = 9;
  optional string partnerStatusStr = 10;
  optional string partnerTransNo = 11;
  int64 totalAmount = 12;
  optional string payUrl = 13;
  optional string qrCodeUrl = 14;
  optional string webviewUrl = 15;
}

message PaymentStatus {
  string statusName = 1;
  string value = 2;
}

message Order {
  string code = 1;
  optional string customerEmail = 2;
  optional string customerMobile = 3;
  optional string customerName = 4;
  string ipnParams = 5;
  string ipnURL = 6;
  string webViewUrl = 7;
  int64 totalAmount = 8;
  int64 orderTime = 9;
  optional string redirectUrl = 10;
  optional string token = 11;
  optional string  orderId = 12;
  optional string  shopId = 13;
  optional string transNo = 14;
}

message Payment {
  string channel = 1;
  string partner = 2;
  string product = 3;
  string merchant = 4;
  optional string terminal = 5;
  optional Info info = 6;
  optional Action action = 7;
  optional string bankCode = 8;
}

message Info {
  optional string deviceId = 1;
  optional string clientIp = 2;
}

enum Action {
  PAY = 0;
  PAY_WITH_RETURN_TOKEN = 1;
  PAY_WITH_TOKEN = 3;
}